<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context="com.dearlhd.helloworld.MainActivity">

    <ViewFlipper
        android:id="@+id/adFlipper"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:flipInterval="3000"
        android:inAnimation="@anim/right_in"
        android:outAnimation="@anim/right_out">

        <include layout="@layout/ad1" />

        <include layout="@layout/ad2" />

        <include layout="@layout/ad3" />

    </ViewFlipper>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/menu_tab1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_name1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/menu_tab2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_name2"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/menu_tab3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_name3"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/menu_tab4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tab_name4"
            android:textColor="#000000" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_cursor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="matrix"
        android:src="@mipmap/line" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>
